kubernetes/hellochart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
        - name: demoapp
          #image: { { .Values.DockerImage } }
          image: aliarslanmushtaq/nodejs-microservice
          ports:
            - containerPort: 3000
